// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddRow /> Snapshots should render custom label 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background-color: rgba(0, 0, 0, 0);
  color: #0D71C8;
  min-height: 32px;
  padding: 6px 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 17px!important;
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 600;
  width: auto;
  line-height: 18px;
  border: 1px solid #0D71C8;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-2:hover {
  border: 1px solid #064499;
  color: #064499;
  cursor: pointer;
}

.emotion-2:focus {
  border: 1px solid #064499;
  color: #064499;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus-visible {
  outline: none;
  box-shadow: 0 0 0.75pt 1.5pt #0D71C8;
  border-color: #FFFFFF!important;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
      data-testid="undefined-ADDROW-BUTTON"
      id="undefined-ADDROW-BUTTON"
      tabindex="0"
      type="button"
    >
      New rows!
    </button>
  </div>
</div>
`;

exports[`<AddRow /> Snapshots should render defaults 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background-color: rgba(0, 0, 0, 0);
  color: #0D71C8;
  min-height: 32px;
  padding: 6px 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 17px!important;
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 600;
  width: auto;
  line-height: 18px;
  border: 1px solid #0D71C8;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-2:hover {
  border: 1px solid #064499;
  color: #064499;
  cursor: pointer;
}

.emotion-2:focus {
  border: 1px solid #064499;
  color: #064499;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus-visible {
  outline: none;
  box-shadow: 0 0 0.75pt 1.5pt #0D71C8;
  border-color: #FFFFFF!important;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
      data-testid="undefined-ADDROW-BUTTON"
      id="undefined-ADDROW-BUTTON"
      tabindex="0"
      type="button"
    >
      Add row
    </button>
  </div>
</div>
`;

exports[`<AddRow /> Snapshots should render disabled 1`] = `
.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  background-color: rgba(0, 0, 0, 0);
  color: #0D71C8;
  min-height: 32px;
  padding: 6px 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 17px!important;
  box-sizing: border-box;
  font-size: 14px;
  font-weight: 600;
  width: auto;
  line-height: 18px;
  border: 1px solid #0D71C8;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-2:disabled {
  opacity: 0.5;
}

.emotion-2:focus-visible {
  outline: none;
  box-shadow: 0 0 0.75pt 1.5pt #0D71C8;
  border-color: #FFFFFF!important;
}

<div>
  <div
    class="emotion-0 emotion-1"
  >
    <button
      class="emotion-2 emotion-3"
      data-testid="undefined-ADDROW-BUTTON"
      disabled=""
      id="undefined-ADDROW-BUTTON"
      tabindex="0"
      type="button"
    >
      New rows!
    </button>
  </div>
</div>
`;
